2005-11-07  Alan Modra  <amodra@bigpond.net.au>

	* macro.c (buffer_and_nest): Skip labels regardless of
	NO_PSEUDO_DOT and flag_m68k_mri.

2005-11-07  Arnold Metselaar <arnold.metselaar@planet.nl>

	* expr.c (integer_constant): Match only 'B' as binary suffix if
	NUMBERS_WITH_SUFFIX and LOCAL_LABELS_FB.  Allow both 'b' and 'B'
	otherwise.

2005-11-04  Alexandre Oliva  <aoliva@redhat.com>

	* read.c (s_weakref): Do not permit redefinitions.
	* symbols.c (colon): Do not permit redefinitions of equated
	symbols.

2005-11-01  Thiemo Seufer  <ths@networkno.de>

	PR gas/1299
	* Makefile.am: Disable -Werror for the itbl-lex.o rule.
	* Makefile.in: Regenerate.

2005-11-01  Thiemo Seufer  <ths@networkno.de>

	* config/tc-mips.c (md_parse_option): Fix typo in comment.

2005-10-30  Mark Mitchell  <mark@codesourcery.com>

	* as.c (show_usage): Document "@FILE".

2005-10-30  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile.am (OBJ_FORMATS): Remove vms.
	Run "make dep-am".
	* Makefile.in: Regenerated.

	* dep-in.sed: Replace " ./" with " ".

2005-10-28  Dave Brolley  <brolley@redhat.com>

	Contribute the following change:
	2005-09-19  Dave Brolley  <brolley@redhat.com>

	* config/tc-m32c.c (default_isa): New static variable.
	(m32c_isa): Now of type CGEN_BITSET.
	(md_begin): Pass &m32c_isa to m32c_cgen_cpu_open.

2005-10-28  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (aeabi_set_public_attributes): Use selected_cpu
	instead of mcpu_cpu_opt.

2005-10-27  Sterling Augustine  <sterling@tensilica.com>

	* config/tc-xtensa.c (find_vinsn_conflicts): Change error messages to
	refer to "ports" instead of "queues".
	(check_t1_t2_reads_and_writes): Pass correct interface values to
	xtensa_interface_inout.

2005-10-27  Jan Beulich  <jbeulich@novell.com>

	* read.c (assign_symbol): Also consider equates already defined.
	* symbols.c (symbol_clone): Also clone the underlying BFD symbol.
	* config/obj-coff.h (obj_symbol_clone_hook): New.
	(coff_obj_symbol_clone_hook): Declare.